# mission-backup

./: .commitlintrc.cjs  .eslintrc  .gitignore  .lintstagedrc  README.md  components.d.ts  main.py  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json  vite.config.ts
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml  release.yml
.husky/: pre-commit
docs/: index.md
docs/.vitepress/: config.js
docs/backend/: doc_app_backend.md  doc_collector.md  doc_command.md  doc_compressor.md  doc_explorer.md  doc_handler.md  doc_logger.md  doc_plugin.md  doc_types.md
docs/frontend/: doc_app_frontend.md  doc_command.md  doc_component.md  doc_locales.md  doc_router.md  doc_store.md  doc_views.md
docs/general/: develop.md  download.md  usage.md
log/: aps.txt  syslog.txt
public/: splashscreen.html
qrc/: imgsrc.py  program.qrc
qrc/qss/: black.css  silvery.css
src/: App.vue  main.ts  types.ts
src-tauri/: .env  .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/icons/Set1/: icon.icns
src-tauri/migrations/2024-06-13-142808_mission/: down.sql  up.sql
src-tauri/migrations/2024-06-13-142820_ignore/: down.sql  up.sql
src-tauri/migrations/2024-06-13-142827_procedure/: down.sql  up.sql
src-tauri/migrations/2024-06-13-142831_backup/: down.sql  up.sql
src-tauri/models/: mission_backup.ndm2
src-tauri/src/: app.rs  command.rs  data_types.rs  handler.rs  logger.rs  main.rs  plugins.rs
src-tauri/src/config/: mod.rs  notify.rs  screensaver.rs  system.rs  watcher.rs
src-tauri/src/core/: cmd.rs  mod.rs  setup.rs  state.rs  tray.rs  window.rs
src-tauri/src/db/: backup.rs  ignore.rs  mission.rs  mod.rs  procedure.rs  schema.rs  utils.rs
src-tauri/src/modules/: collector.rs  compressor.rs  explorer.rs  mod.rs  remote.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/utils/: common.rs  compress.rs  crypto.rs  explorer.rs  logger.rs  migrate.rs  mod.rs
src/assets/icons/: index.ts
src/assets/style/: RouteTransition.less  route.less
src/assets/style/theme/: dark-vars.less  default-vars.less
src/components/: CloseDialog.vue  Greet.vue  Lock.vue  LockCover.vue  NavigateSideBar.vue  NavigateTray.vue  PageHeader.vue  SideMenu.vue  StatusDot.vue  TitleBar.vue
src/locales/: index.ts
src/locales/langs/: en_US.json  zh_CN.json
src/router/: index.ts
src/store/: index.ts  types.ts
src/store/mission/: index.ts  types.ts
src/store/modules/mission/: index.ts  types.ts
src/store/modules/setting/: index.ts  types.ts
src/store/modules/statistic/: index.ts
src/store/notify/: index.ts  types.ts
src/store/screensaver/: index.ts  types.ts
src/store/status/: index.ts  types.ts
src/store/system/: index.ts  types.ts
src/store/watcher/: index.ts  types.ts
src/utils/: index.ts
src/utils/cmd/: index.ts  types.ts
src/utils/common/: index.ts
src/utils/error/: index.ts
src/utils/event/: index.ts
src/views/: GlobalSetting.vue  LockPage.vue  MissionConfig.vue  PasswordSetting.vue  StatisticPage.vue  TablePage.vue
src/views/Backup/: Backup.vue
src/views/Config/: Config.vue
src/views/Config/components/: NotifyConfig.vue  ScreensaverConfig.vue  SystemConfig.vue  WatcherConfig.vue
src/views/Mission/: Mission.vue
src/views/Mission/components/: HandleDialog.vue
src/views/Procedure/: Procedure.vue
src/views/Procedure/components/: HandleDialog.vue  IgnoreDialog.vue
src/views/Screensaver/: Screensaver.vue
src/views/SettingDialogs/: ContactSetting.vue  DelaySetting.vue  DialogFooter.vue  NotifySetting.vue  PasswordReSet.vue  TemplateDialog.vue  UpdateMessage.vue
src/views/Statistic/: Statistic.vue
src/views/Statistic/components/: BackupChart.vue
src/views/Toolbox/: Toolbox.vue
src/views/Toolbox/components/: CrontabTool.vue  DatabaseTool.vue  LogTool.vue  MigrateTool.vue
syslog/: log.txt
test/: test_bsamba.py  test_collector.py  test_compressor.py  test_config.txt  test_idworker.py  test_monitor.py  test_save_config.py  test_scheduler.py  test_webdav.py
utils/: bsamba.py  collector.py  compressor.py  idworker.py  monitor.py  plan.py  runner.py  scheduler.py  webdav.py
widgets/: closedialog.py  documentdialog.py  mainpage.py  mainwindow.py  mainwindow.ui  mymainwindow.py  mysettingpage.py  remotedialog.py  settingpage.py  settingpage.ui  trayicon.py
widgets/ui/: closewidget.py  closewidget.ui  documentdialog.py  documentdialog.ui  maindialog.py  maindialog.ui  remotedialog.py  remotedialog.ui  settingdialog.py  settingdialog.ui
