[package]
name = "mission-backup"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.35"
sys-locale = "0.3.1"
base64 = "0.22.0"
sha2 = "0.10.8"
url = "2.5.0"
zip = "0.6.6"
tar = "0.4.40"
flate2 = "1.0.28"
bzip2 = "0.4.4"
xz2 = "0.1.7"
sevenz-rust={version="0.5.4", features=["compress"]}
walkdir = "2.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
